--- a/html/index.html
+++ b/html/index.html
@@ -14,7 +14,7 @@
   </head>
   <body onload="relojdigital(); setInterval('relojdigital()', 1000 )" class="uno l-index">
     <header>
-      <section></section>
+      <section><a href="http://www.reactivemanifesto.org/"><img style="border: 0; position: fixed; left: 0; top:0; z-index: 9000" src="../images/reactive.png"></a></section>
     </header>
     <nav>
       <section>
@@ -32,8 +32,8 @@
     <main>
       <section>
         <div class="b-intro panel centered paralax">
-          <h1 id="top">S4n</h1><small>High-Tech software for agile companies</small>
-          <p> <strong>Lorem ipsum dolor sit amet, </strong>consectetur adipisicing elit. Odio, inventore obcaecati nostrum voluptate excepturi molestias <strong>recusandae quis blanditiis dolore praesentium.</strong></p>
+          <h1 id="top">S4n</h1><small>Reactive applications for agile companies</small>
+          <p><strong>Cutting-edge software technologies </strong>applied in challenging business contexts where quick results are what really matters.</p>
           <div class="timezone">
             <div id="ban_reloj" class="bg1">
               <div id="Reloj" class="reloj">11 . 21</div>
@@ -43,77 +43,84 @@
         </div>
         <div class="panel s4n"><a href="#top" class="logo">S4n</a></div>
         <div id="services" class="b-services panel halves col-2">
-          <h2>Services</h2><small class="unit">We help <strong>forward thinking companies </strong>create modern software.</small>
+          <h2>Services</h2><small class="unit">Helping companies to become<strong> agile </strong>and <strong>reactive</strong></small>
           <div class="tabset">
-            <div class="summary software active"> 
+            <div class="summary software active">
               <h3><span>Software Delivery</span></h3>
             </div>
-            <div class="details"> 
-              <p>Adopting cutting edge technologies has let us to deliver higher technical value to our clients.</p>
-              <p>Adopting cutting edge software paradigms has let us to find out together new business leveraged by software approaches within our clients.</p><a href="services.html" class="more">Learn more</a>
+            <div class="details">
+              <p> Involving our clients within the core of our <strong class="em">agile and continuous software delivery model </strong>has let them to obtain results up to 5x faster and getting rid of the rigid requirements definition and the Big Design Up Front traditional approaches.</p><a href="services.html" class="more">more to come..</a>
             </div>
-            <div class="summary consulting"> 
-              <h3><span>Consulting</span></h3>
+            <div class="summary consulting">
+              <h3><span>Software Consultancy</span></h3>
             </div>
-            <div class="details"> 
-              <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Odio, inventore obcaecati nostrum voluptate excepturi molestias recusandae quis blanditiis dolore praesentium.</p><a href="services.html" class="more">Learn more</a>
+            <div class="details">
+              <p>From a technical proof of concept to a customized reference software architecture definition, our goal is to deliver <strong class="em">tangible </strong>results since the first stages.</p><a href="services.html" class="more">more to come..</a>
             </div>
           </div>
         </div>
         <div class="panel s4n"><a href="#top" class="logo">S4n</a></div>
         <div id="success" class="b-cases panel">
-          <h2 class="aright"> <span>Success Cases</span></h2>
+          <h2 class="aright"><span>Success Cases</span></h2>
           <div class="case cointernet col-2">
-            <div class="description"><small>Incident Management System<strong>CO Internet S.A.S</strong></small>
-              <p>Malicious Activity Monitoring is a vital part of preventing security attacks on the Web.  XXX are propagated everyday affecting large comunities all over the world, therefore demanding a proactive... </p><a href="cases.html" class="more">Learn more</a>
+            <div class="description"><small>Incident Management System<strong>CO Internet S.A.S - Neustar Inc</strong></small>
+              <p>A Malicious Activity Monitoring system based on data feeding provided by the worldwide web security leaders. The IMS enables the execution and visualization of complex analytical procedures that support research processes for assessing, profiling and solving of security attacks on the Web.</p><a href="cases.html" class="more">more to come..</a>
               <div class="technologies"><img src="../images/spring.jpg" alt="Spring"><img src="../images/mongoDB.jpg" alt="mongoDB"></div>
             </div>
             <div class="reel"><img src="../images/cointernet1.jpg" alt="Spring"></div>
           </div>
           <div class="case certicamara col-2">
-            <div class="reel"><img src="../images/certicamara1.jpg" alt="Spring"></div>
-            <div class="description"><small>eBilling Information System<strong>Certicámara S.A.</strong></small>
-              <p>Certicámara provides secure online transaction processing solutions to businesses and government  organizations within Colombia. Seven4n was chosen as the technology partner to implement the Certihuella system...</p><a href="cases.html" class="more">Learn more</a>
-              <div class="technologies"><img src="../images/scala.jpg" alt="scala"><img src="../images/akka.jpg" alt="akka"><img src="../images/mongoDB.jpg" alt="mongoDB"></div>
+            <div class="reel"><img src="../images/todo1.jpg" alt="Spring"></div>
+            <div class="description"><small>Liferay Platform Solutions<strong>TODO1 Services </strong></small>
+              <p>Architecture and optimization services for highly distributed and concurrent systems belonging to some of the largest financial companies in Latin America.</p><a href="cases.html" class="more">more to come..</a>
+              <div class="technologies"><img src="../images/java.jpg" alt="java"><img src="../images/liferay.jpg" alt="liferay"></div>
             </div>
           </div>
           <div class="case sura col-2">
-            <div class="description"><small>Incident Management System<strong>Sura</strong></small>
-              <p>Malicious Activity Monitoring is a vital part of preventing security attacks on the Web.  XXX are propagated everyday affecting large comunities all over the world, therefore demanding a proactive... </p><a href="cases.html" class="more">Learn more</a>
-              <div class="technologies"><img src="../images/spring.jpg" alt="Spring"><img src="../images/mongoDB.jpg" alt="mongoDB"></div>
+            <div class="description"><small>CertiFactura - e-Billing Solution<strong>CERTICÁMARA S.A</strong></small>
+              <p>A multi-tenant and flexible system for e-Billing transactions supporting public and private sector companies in Colombia. CertiFactura enables the expedition of more than 50.000 bills monthly compliant with the regulatory colombian framework. </p>
+              <p>Certifactura relies on a high parametrization capacity that has allowed Certicámara to increase and keep a high market share regarding electronic services delivery based on SaaS models.</p><a href="cases.html" class="more">more to come..</a>
+              <div class="technologies"><img src="../images/java.jpg" alt="java"></div>
             </div>
-            <div class="reel"><img src="../images/sura1.jpg" alt="Spring"></div>
+            <div class="reel"><img src="../images/certicamara1.jpg" alt="Spring"></div>
+          </div>
+          <div class="case certicamara col-2">
+            <div class="reel"><img src="../images/sura1.jpg" alt="Scala, Akka, MongoDB"></div>
+            <div class="description"><small>SURA EN LÍNEA<strong>SEGUROS DE VIDA SURAMERICANA S.A</strong></small>
+              <p>A system developed under the reactive principles, provides a high performance solution with fault tolerance and predictable outcomes.  </p>
+              <p>Sura en Línea has enabled colombian citizens to intuitively purchase car insurances and delivered as a responsive solution it has granted users accessibility on any device. Deployed on a PaaS model, it allows the scalability and the Time to Market demanded by the business.</p><a href="cases.html" class="more">more to come..</a>
+              <div class="technologies"><img src="../images/scala.jpg" alt="Scala"><img src="../images/akka.jpg" alt="Akka"><img src="../images/mongoDB.jpg" alt="mongoDB"><img src="../images/angularjs.jpg" alt="Angular js"></div>
+            </div>
           </div>
         </div>
         <div class="panel s4n"><a href="#top" class="logo">S4n</a></div>
         <div id="clients" class="b-clients panel centerleft">
-          <h2>Clients</h2><small>We help <strong>forward thinking companies </strong>create modern software.</small>
-          <p>Adopting cutting edge technologies has let us to deliver higher technical value to our clients. Adopting cutting edge software paradigms has let us to find out together new business leveraged by software approaches within our clients.</p><br><a href="cases.html" class="more">Learn more</a>
-          <div class="logos"><span class="sura">Sura</span><span class="heinsohn">Heinsohn</span><span class="mundial">Mundial de seguros</span><span class="liberty">Liberty Seguros</span><span class="bancoldex">Bancoldex</span><span class="ccs">Consejo colombiano de seguros</span><span class="co">Cointernet</span><span class="equidad">La equidad seguros</span><span class="certicamara">Certicámara</span><span class="camara">Cámara de comercio de bogotá</span><span class="onswipe">Onswipe</span><span class="carvajal">Carvajal</span><span class="bvc">Bolsa de valores de colombia</span><span class="cintel">Cintel</span><span class="synapsis">Synapsis</span><span class="fac">Fuerza aerea colombiana</span><span class="certifactura">Certifactura</span><span class="kpm">Kpm</span></div>
+          <h2>Clients</h2>
+          <p>More than <strong class="em">55 </strong>solutions deployed in companies belonging to multiple economic sectors such as: Insurance, Government, Banking and Financial Institutions, e-Business, Professional Services and Technology and Research</p><br><a href="cases.html" class="more">more to come..</a>
+          <div class="logos"><span class="sura">Sura</span><span class="co">Cointernet</span><span class="camara">Cámara de comercio de bogotá</span><span class="afiduciaria">Alianza Fiduciaria</span><span class="bvc">Bolsa de valores de colombia</span><span class="certicamara">Certicámara</span><span class="liberty">Liberty Seguros</span><span class="bancoldex">Bancoldex</span><span class="gel">Gobierno en Línea</span><span class="uniandinos">Uniandinos</span><span class="cintel">Cintel</span><span class="kpm">KPMG</span></div>
         </div>
         <div class="panel s4n"><a href="#top" class="logo">S4n</a></div>
         <div id="aboutus" class="b-aboutus panel centered">
-          <h2>About Us</h2><small>We are <strong>commited to building </strong>a great place to work.</small>
-          <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Vitae nesciunt facilis eligendi eos repudiandae laboriosam aperiam esse ut quo placeat.</p><a href="cases.html" class="more">Learn more</a>
-          <div class="aboutus"> </div>
+          <h2>About Us</h2><small>A<strong> high quality</strong> work environment delivers the <strong>best solutions</strong></small>
+          <p>A results-only work environment that values self-organization, respect and the ambition to improve the way we build and deliver software to the world.</p><a href="cases.html" class="more">more to come..</a>
+          <div class="aboutus"></div>
         </div>
         <div class="panel s4n"><a href="#top" class="logo">S4n</a></div>
         <div id="findus" class="b-findus panel paralax">
           <h2>Find Us</h2>
-          <p> <strong>Lorem ipsum dolor sit amet, </strong>consectetur adipisicing elit. Vitae nesciunt facilis eligendi eos repudiandae.</p>
+          <p class="center"><strong>Operations in USA and Colombia let us reach out to you faster</strong></p>
           <div class="findus col-2">
             <ul class="vcard atlanta unit">
               <li class="adr">
-                <div class="location"><span class="region">Atlanta, </span><span class="country-name">USA</span></div>
-                <div class="street-address">4069 Hilhouse Rd SW </div>
-                <div><span class="locality">Smyrna,</span><span><abbr title="Georgia" class="region">GA</abbr></span></div>
+                <div class="location"><span class="country-name">USA</span></div>
+                <div class="street-address"><span>Business Development Center</span><span>Atlanta, Georgia </span><span>4069 Hilhouse Rd SW </span></div>
               </li>
-              <li class="email">info@s4n.co</li>
+              <li class="email">info-usa@s4n.co</li>
             </ul>
             <ul class="vcard bogota unit">
-              <li class="adr"> 
+              <li class="adr">
                 <div class="location"><span class="region">Bogotá, </span><span class="country-name">Colombia</span></div>
-                <div class="street-address"> <span>Parque Central Bavaria</span><span>Calle 31 No. 13A - 51</span><span>Ed. Panorama Torre 1 | Oficina 101</span></div>
+                <div class="street-address"><span>Technical Development Center</span><span>Carrera 19A # 84-14 Piso 6</span><span>Edificio Torrenova</span></div>
               </li>
               <li class="email">info@s4n.co</li>
             </ul>
@@ -124,7 +131,7 @@
     <footer>
       <section>
         <div class="b-bottom copy">
-          <p class="seven4n"><span class="logo">S4n</span>2014 - Todos los derechos reservados</p>
+          <p class="seven4n"><span class="logo">S4n</span>2014 - All rights reserved</p>
         </div>
       </section>
     </footer>
