--- a/html/index.html
+++ b/html/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <title>S4n High-Tech Software For Agile Companies </title>
+    <title>Reactive applications for agile companies</title>
     <meta charset="utf-8">
     <meta name="author" content="Seven4n">
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
